apps/photoprism/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism-db-deployment
  namespace: photoprism
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photoprism-db
  template:
    metadata:
      labels:
        app: photoprism-db
    spec:
      containers:
        - name: photoprism-db
          image: mariadb:10.6
          args:
            - mysqld
            - --innodb-buffer-pool-size=128M
            - --transaction-isolation=READ-COMMITTED
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
            - --max-connections=512
            - --innodb-rollback-on-timeout=OFF
            - --innodb-lock-wait-timeout=120
          ports:
            - containerPort: 3308
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: photoprism-db
      restartPolicy: Always
      volumes:
        - name: photoprism-db
          nfs:
            path: /volume1/kube/photoprism-db
            server: 192.168.1.208
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism-db-service
  namespace: photoprism
spec:
  selector:
    app: photoprism-db
  ports:
    - name: photoprism-db
      protocol: TCP
      port: 3306
      targetPort: 3306
