apps/photoprism/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: photoprism
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
      - name: photoprism
        image: photoprism/photoprism:latest
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - mountPath: /photoprism/originals
          name: originals
        - mountPath: /photoprism/import
          name: import
        - mountPath: /photoprism/storage
          name: photoprism-config
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http
      volumes:
      - name: originals
        nfs:
          path: /volume1/Media/Memories
          server: 192.168.1.208
      - name: import
        nfs:
          path: /volume1/photo
          server: 192.168.1.208
      - name: photoprism-config
        nfs:
          path: /volume1/kube/photoprism
          server: 192.168.1.208
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: photoprism
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism
  namespace: photoprism
  annotations:
    kubernetes.io/ingress.class: nginx   
    cert-manager.io/cluster-issuer: letsencrypt-prod
    photoprism.io/enable: 'true'
    hajimari.io/appName: photos
    hajimari.io/icon: camera
    nginx.ingress.kubernetes.io/proxy-body-size: "512M"
spec:
  rules:
  - host: photos.kleinsorge.dev
    http:
      paths:
      - backend:
          service:
            name: photoprism
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
    - secretName: photoprism-tls-certificate
      hosts:
        - photos.kleinsorge.dev
